syntax = "proto3";

package multi_evaluation.v1;

service MultiEvaluationService {
    rpc FetchAll(FetchAllRequest)returns(FetchAllResponse){}
    rpc FetchByTermIdAndUserId(FetchByTermIdAndUserIdRequst)returns(FetchByTermIdAndUserIdResponse){}
    rpc SubmitMultiEvaluation(SubmitMultiEvaluationRequest)returns(SubmitMultiEvaluationResponse){}
}

message MultiBusinessTerm{
    int32 id = 1;
    string business_term_name = 2;
    string business_term_start_date =3;
    string business_term_end_date =4;
    string multi_term_start_date =5;
    string multi_term_end_date =6;
    bool is_current_term = 7;
}

message MultiEvaluation{
    int32 user_id = 1;
    int32 target_user_id = 2;
    int32 multi_term_id = 3;
    int32 score = 4;
    string comment = 5;
}

message FetchAllRequest{
    int32 take  = 1;
    bool order_by = 2;
}

message FetchAllResponse{
    int32 status = 1;
    string error = 2;
    repeated MultiBusinessTerm data = 3;
}

message FetchByTermIdAndUserIdRequst{
    int32 termid  = 1;
    int32 userId = 2;
}

message FetchByTermIdAndUserIdResponse{
    int32 status = 1;
    string error = 2;
    repeated MultiEvaluation data = 3;
}

message SubmitMultiEvaluationRequest{
    int32 user_id = 1;
    int32 target_user_id = 2;
    int32 multi_term_id = 3;
    int32 score = 4;
    string comment = 5;
}

message SubmitMultiEvaluationResponse{
    int32 status = 1;
    string error = 2;
}
